@startuml
'https://plantuml.com/sequence-diagram

class InventoryTrackerApp {
    start()
    main()
    stop()
}

class MainWindowControllers {
    - myInventory: InventoryList
    - itemEdited: Item

    tableView: TableView<Item>
    serialNumber: TableColumn<Item, String>
    name: TableColumn<Item, String>
    price: TableColumn<Item, String>

    removeButton: ImageView
    addButton: ImageView

    remainingCapacity: Label
    searchField: TextField

    + removeButtonClicked()
    + addButtonClicked()
    + editButtonClicked()
    + sortLowToHigh()
    + saveAsTSV()
    + saveAsHTML()
    + saveAsJSON()
    + openInventory()
    + initialize()
    + getItems()
}

class AddItemWindowController {
    LETTERS: char[]
    SPECIAL_CHARACTERS: char[]

    submit: Button
    itemName: TextField
    serialNum: TextField
    itemPrice: TextField

    + submitButtonClicked()
}

class EditItemWindowController {
    LETTERS: char[]
    SPECIAL_CHARACTERS: char[]

    submit: Button
    itemName: TextField
    serialNum: TextField
    itemPrice: TextField

    + saveChangesClicked()
    + backButtonClicked()
}

class Item {
        - serialNumber: String
        - price: String
        - name: String

        + Item()
        + getSerialNumber()
        + setSerialNumber()
        + getPrice()()
        + setPrice()
        + getName()
        + setName()()
        + toString()
        + toTSV()
}

class InventoryList {
    - name: String
    - capacity: int
    + count: int
    + items: ArrayList<Item>

    + InventoryList()
    + getName()
    + setName()
    + getRemainingCapacity()
    + setCapacity()
    + updateName()
    + addItem()
    + removeItem()
    + editName()
    + editSerialNumber()
    + editPrice()
    + contains()
    + getItems()
}

class Html {
    + generateHeaderHtml()
    + generateBodyHtml()
}

class DataLoading {
    +loadData
}


javafx.Application <|-- InventoryTrackerApp
InventoryTrackerApp -- MainWindowControllers
MainWindowControllers -- AddItemWindowController
MainWindowControllers -- EditItemWindowController
MainWindowControllers - Item
MainWindowControllers - DataLoading
AddItemWindowController - Item
Item -- InventoryList
Html - MainWindowControllers

@enduml